# helmsman

./: .gitignore  CLAUDE.md  CODEBASE_ANALYSIS.md  QUICK_REFERENCE.md
OneDrive/Documents/commitment-of-traders/: .gitignore  REPOSITORY_ANALYSIS_REPORT.md
OneDrive/Documents/helios/: .dockerignore  .env.development  .env.production  .gcloudignore  .gitattributes  App.tsx  DOCKER_SETUP.md  Dockerfile  Dockerfile.dev  ErrorReports.txt  FULL_STACK_INTEGRATION.md  IMPLEMENTATION_PLAN_v0.9.0.md  Missing_Components.txt  NPM Enviroment Startup.txt  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_COMPREHENSIVE_TEST_REPORT.md  PHASE_2_STATUS.md  PHASE_3_CODE_QUALITY_RESOLUTION.md  PHASE_3_IMPLEMENTATION_PLAN.md  PHASE_3_SYSTEMS_TEST_REPORT.md  PHASE_4_IMPLEMENTATION_COMPLETE.md  (+33 more)
OneDrive/Documents/helsman-supervisor/: .gitattributes  .gitignore  .pre-commit-config.yaml  IDE-hook.md  MR-Specs.json  README.md  package-lock.json  powerball_manifest.txt  pyproject.toml  setup.py  supervision_report.json  user_guide.md
OneDrive/Documents/helsman-supervisor/diagnostics/: audit_gitignore.py  encoding_audit.py  fortune.py
OneDrive/Documents/helsman-supervisor/diagnostics/diagnostics/: validate_encoding.py
OneDrive/Documents/helsman-supervisor/helmsman/: __init__.py  cli.py  config.py  process.py  report.py  runtime.py
OneDrive/Documents/helsman-supervisor/repo_sync_agent/: .gitignore  README.md  config.py  repo_sync_agent.py
OneDrive/Documents/helsman-supervisor/repo_sync_agent/modules/: audit.py  bootstrap.py  cleaner.py  committer.py  lucky.py  manifest.py  remote.py
(+54 files in other folders)
